adds button to scrape

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,6 +17,7 @@
       <h1 class="welcome-banner"><i class="fa fa-newspaper-o"> Downtown NY News</i></h1>
       <hr>
       <p style="text-align: center">Washington Square News.</p>
+      <button class="btn btn-success" style="float: right">Scrap News</button>
     </div>
   </header>
 
